bug 124053  Fix invalid use of JVMContext TLS to map between threads, JSContexts and JSJavaThreadStates patch by beard@netscape.com r=bnesse sr=rpotts